--- a/Numpy.ipynb
+++ b/Numpy.ipynb
@@ -44,29 +44,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "id": "3f7a47ed",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr1 = np.array([[1,2,3],\n",
+    "                 [4,5,6]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "83250048",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([1, 2, 3, 4, 5])"
+       "array([[1, 2, 3],\n",
+       "       [4, 5, 6]])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "arr"
+    "arr1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "0f23b544",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "numpy.ndarray"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(arr1)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "83250048",
+   "id": "eb4fe264",
    "metadata": {},
    "outputs": [],
    "source": []
