--- a/Numpy.ipynb
+++ b/Numpy.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "a7693782",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np"
+    "import numpy as np # For faster numerical calcualations"
    ]
   },
   {
@@ -23,28 +23,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "id": "18392335",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "numpy.ndarray"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'numpy.ndarray'>\n",
+      "1\n",
+      "(5,)\n"
+     ]
     }
    ],
    "source": [
-    "type(arr)"
+    "print(type(arr))\n",
+    "print(arr.ndim)\n",
+    "print(arr.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "id": "3f7a47ed",
    "metadata": {},
    "outputs": [],
@@ -77,32 +78,313 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 28,
    "id": "0f23b544",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'numpy.ndarray'>\n",
+      "2\n",
+      "(2, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(arr1))\n",
+    "print(arr1.ndim)\n",
+    "print(arr1.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "fe37dc78",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'numpy.ndarray'>\n",
+      "3\n",
+      "(1, 2, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr2 = np.array([[[1,2,3],\n",
+    "                 [4,5,6]]])\n",
+    "\n",
+    "print(type(arr2))\n",
+    "print(arr2.ndim)\n",
+    "print(arr2.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "eb4fe264",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "numpy.ndarray"
+       "array([[ 2,  4,  6],\n",
+       "       [ 8, 10, 12]])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "type(arr1)"
+    "arr1*2 #showing numberical calcualtion working"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eb4fe264",
+   "id": "2dbab6f4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "4\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "#accessing #chain indexing\n",
+    "print(arr2[0][0][0])\n",
+    "print(arr[3])\n",
+    "print(arr1[1][0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "58284685",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "5\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "#acessing #multidimension indexing -faster\n",
+    "print(arr2[0 ,1, 1])\n",
+    "print(arr[4])\n",
+    "print(arr1[1,0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "4714b565",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "(2, 2, 3)\n",
+      "numpy\n"
+     ]
+    }
+   ],
+   "source": [
+    "#numpy uses concatination \n",
+    "arr3 = np.array([[['a','n','c'],['p','b','d']],\n",
+    "        [['um','dm','cm'],['af','y','cf']]])\n",
+    "print(arr3.ndim)\n",
+    "print(arr3.shape)\n",
+    "word1 =arr3[0,0,1]+arr3[1,0,0]\n",
+    "word2 = arr3[0,1,0]+arr3[1,1,1]\n",
+    "word =word1 + word2\n",
+    "print(word)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7a5b7a89",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "(4, 3)\n",
+      "[1 2 3]\n",
+      "[[1 2 3]\n",
+      " [4 5 6]]\n",
+      "[[1 2 3]\n",
+      " [7 8 9]]\n",
+      "[[10 11 12]\n",
+      " [ 7  8  9]\n",
+      " [ 4  5  6]\n",
+      " [ 1  2  3]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#slicing #array[start :end:end] #row slicing\n",
+    "arr4 = np.array([[1,2,3],\n",
+    "                 [4,5,6],\n",
+    "                 [7,8,9,],\n",
+    "                 [10,11,12]])\n",
+    "print(arr4.ndim)\n",
+    "print(arr4.shape)\n",
+    "print(arr4[0])\n",
+    "print(arr4[0:2])\n",
+    "print(arr4[::2])\n",
+    "print(arr4[::-1]) #reversing rows"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "48eb97ad",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 1  4  7 10]\n",
+      "[[ 2  3]\n",
+      " [ 5  6]\n",
+      " [ 8  9]\n",
+      " [11 12]]\n",
+      "[[ 3]\n",
+      " [ 6]\n",
+      " [ 9]\n",
+      " [12]]\n",
+      "[[ 1  2]\n",
+      " [ 4  5]\n",
+      " [ 7  8]\n",
+      " [10 11]]\n",
+      "[[ 3  2  1]\n",
+      " [ 6  5  4]\n",
+      " [ 9  8  7]\n",
+      " [12 11 10]]\n",
+      "[[12 11 10]\n",
+      " [ 9  8  7]\n",
+      " [ 6  5  4]\n",
+      " [ 3  2  1]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#column Slicing\n",
+    "print(arr4[:,0])\n",
+    "print(arr4[:,1:])\n",
+    "print(arr4[:,-1:])\n",
+    "print(arr4[:,:-1])\n",
+    "print(arr4[:,::-1])#reversing column\n",
+    "print(arr4[::-1,::-1])#reversing entirely"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "id": "849b5554",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2 3 4 5 6 8 9]\n",
+      "[0 1 2 3 4 6 7]\n",
+      "[1 2 3 4 5 7 8]\n",
+      "[1. 2. 3. 4. 5. 7. 8.]\n",
+      "[    1    32   243  1024  3125 16807 32768]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Scalar arithmetic operations\n",
+    "arr5 =np.array([1,2,3,4,5,7,8])\n",
+    "print(arr5 + 1)\n",
+    "print(arr5 - 1)\n",
+    "print(arr5 * 1)\n",
+    "print(arr5 / 1)\n",
+    "print(arr5 ** 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "id": "2163201d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1.         1.41421356 1.73205081 2.         2.23606798 2.64575131\n",
+      " 2.82842712]\n",
+      "[3. 4. 1.]\n",
+      "[2. 3. 1.]\n",
+      "[3. 4. 2.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#vectoried arithmetic operation\n",
+    "#for applying funtions with out loops\n",
+    "print(np.sqrt(arr5))\n",
+    "arr6 = np.array([2.55,3.9,1.022])\n",
+    "print(np.round(arr6))\n",
+    "print(np.floor(arr6))#round down\n",
+    "print(np.ceil(arr6))#round up"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "id": "ad48b764",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.141592653589793\n"
+     ]
+    }
+   ],
+   "source": [
+    "#constants\n",
+    "print(np.pi)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ed3c4e71",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#vectorised + Scalar operations \n"
+   ]
   }
  ],
  "metadata": {
