--- a/Numpy.ipynb
+++ b/Numpy.ipynb
@@ -378,13 +378,377 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 89,
    "id": "ed3c4e71",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Area of circles : [ 28.27433388 113.09733553 254.46900494]\n"
+     ]
+    }
+   ],
    "source": [
-    "#vectorised + Scalar operations \n"
+    "#vectorised + Scalar operations\n",
+    "\n",
+    "radii = np.array([3,6,9])\n",
+    "\n",
+    "print(\"Area of circles :\",np.pi *radii **2)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "id": "ef468d5f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10  6  8 11 13]\n",
+      "[-8 -2 -2 -3 -3]\n",
+      "[ 9  8 15 28 40]\n",
+      "[0.11111111 0.5        0.6        0.57142857 0.625     ]\n",
+      "[     1     16    243  16384 390625]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr7 =np.array([9,4,5,7,8])\n",
+    "arr =np.array([1,2,3,4,5])\n",
+    "\n",
+    "print(arr + arr7)\n",
+    "print(arr - arr7)\n",
+    "print(arr * arr7)\n",
+    "print(arr / arr7)\n",
+    "print(arr ** arr7)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "47172ea5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[False False False False False]\n",
+      "[ True False  True False  True]\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "print(arr == arr7)\n",
+    "arr7 = np.array([1,4,3,6,5])\n",
+    "print(arr == arr7)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "id": "368625f5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[False  True False False False]\n",
+      "[ True  True False False  True]\n",
+      "[False False  True  True False]\n",
+      "[ 91 100   0   0  73]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#comparison \n",
+    "scores = np.array([91,100,55,40,73])\n",
+    "\n",
+    "print(scores == 100)\n",
+    "print(scores >= 60)\n",
+    "print(scores < 60)\n",
+    "scores [scores < 60] = 0\n",
+    "print(scores)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "71fe7b7e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2, 3)\n",
+      "(1, 3)\n",
+      "[[ 1  8 21]\n",
+      " [ 4 20 42]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#broadcasting is to allow to perform operations on array of different shapes\n",
+    "#condition : no.of col or row are match or either of them are 1. both row and column need from  follow backward\n",
+    "arr1 = arr1\n",
+    "arr8 = np.array([[1,4,7]])\n",
+    "print(arr1.shape)\n",
+    "print(arr8.shape)\n",
+    "print(arr1 *arr8)            \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "id": "89956913",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 10)\n",
+      "(10, 1)\n",
+      "multiplication array : [[  1   2   3   4   5   6   7   8   9  10]\n",
+      " [  2   4   6   8  10  12  14  16  18  20]\n",
+      " [  3   6   9  12  15  18  21  24  27  30]\n",
+      " [  4   8  12  16  20  24  28  32  36  40]\n",
+      " [  5  10  15  20  25  30  35  40  45  50]\n",
+      " [  6  12  18  24  30  36  42  48  54  60]\n",
+      " [  7  14  21  28  35  42  49  56  63  70]\n",
+      " [  8  16  24  32  40  48  56  64  72  80]\n",
+      " [  9  18  27  36  45  54  63  72  81  90]\n",
+      " [ 10  20  30  40  50  60  70  80  90 100]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#multiplication table by broadcasting\n",
+    "\n",
+    "s = np.array([[1,2,3,4,5,6,7,8,9,10]])\n",
+    "c = np.array([[1],[2],[3],[4],[5],[6],[7],[8],[9],[10]])\n",
+    "print(s.shape)\n",
+    "print(c.shape)\n",
+    "print(\"multiplication array :\",s * c)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "id": "daec4d51",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "55\n",
+      "5.5\n",
+      "2.8722813232690143\n",
+      "8.25\n",
+      "1 10\n",
+      "0 9\n",
+      "[ 7  9 11 13 15]\n",
+      "[15 40]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#aggregate function\n",
+    "# which summerize data and return mostly a single value\n",
+    "arr9 = np.array([[1,2,3,4,5],\n",
+    "                   [6,7,8,9,10]])\n",
+    "print(np.sum(arr9))\n",
+    "print(np.mean(arr9))\n",
+    "print(np.std(arr9))\n",
+    "print(np.var(arr9))\n",
+    "print(np.min(arr9), np.max(arr9))\n",
+    "print(np.argmin(arr9), np.argmax(arr9))\n",
+    "print(np.sum(arr9, axis = 0))#all columns sum\n",
+    "print(np.sum(arr9, axis = 1))#all row sum"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "id": "64833025",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[17 16 13]\n",
+      "[30 20 21 25 39 44 22 34 18]\n",
+      "[89 65]\n",
+      "[30 20 16 44 22 34 18]\n",
+      "[17 21 89 25 65 39 13]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#flitering \n",
+    "#process of  selecting elements that match the condition \n",
+    "ages = np.array([[17,30,20,21,16,89,25],\n",
+    "                 [65,39,13,44,22,34,18]])\n",
+    "\n",
+    "teenagers = ages[ages < 18]\n",
+    "adults = ages[(ages>=18) & (ages<65)]\n",
+    "Seniors = ages[ages>=65]\n",
+    "evens = ages[ages %2 == 0]\n",
+    "odds = ages[ages %2 != 0]\n",
+    "print(teenagers)# one d array\n",
+    "print(adults) #\"\"\n",
+    "print(Seniors)#\"\"\n",
+    "print(evens)#\"\"\n",
+    "print(odds)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d97b6c2f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-1 30 20 21 -1 -1 25]\n",
+      " [-1 39 -1 44 22 34 18]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#WHERE : used to preserve the original shape\n",
+    "adults = np.where((ages>=18) & (ages<65) , ages ,-1)#where(x,y,fillvalues[any or 0 or np.nan or /])\n",
+    "print(adults)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "id": "67503a0b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 84  21  69]\n",
+      " [ 45  56  39]\n",
+      " [ 70  50  28]\n",
+      " [ 63  84  81]\n",
+      " [ 61 101  20]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#random numbers\n",
+    "rng = np.random.default_rng()\n",
+    "print(rng.integers(1,102 ,(5,3)))#low, high , size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "id": "f52be6e5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[48 52 77]\n",
+      " [96  4 15]\n",
+      " [84 96 26]\n",
+      " [32 88 43]\n",
+      " [28 84 26]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "rng = np.random.default_rng(seed = 1)# seed used to form same randam values , used to save same output\n",
+    "print(rng.integers(1,102 ,(5,3))) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a7d3aeec",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.417022004702574\n"
+     ]
+    }
+   ],
+   "source": [
+    "#for floating point\n",
+    "#uniform used to set range and gernerate random values between 0,1 by default\n",
+    "np.random.seed(seed =1)#setting the seed\n",
+    "print(np.random.uniform())#low, high,size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "id": "7a955669",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 6  5  4 10  2  9  8  1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "rng = np.random.default_rng()\n",
+    "array = np.array([1,4,5,6,8,9,10,2])\n",
+    "rng.shuffle(array)\n",
+    "print(array)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 158,
+   "id": "f76b0254",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['apple' 'orange' 'apple']\n",
+      " ['coconut' 'apple' 'banana']\n",
+      " ['coconut' 'coconut' 'orange']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "fruits = np.array([\"apple\",\"banana\",\"coconut\",\"orange\"])\n",
+    "print(rng.choice(fruits,(3,3)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a84e1679",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
