--- a/Pandas.ipynb
+++ b/Pandas.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "8302b782",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "838980b6",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "1cbc10eb",
    "metadata": {},
    "outputs": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "2eb18c0d",
    "metadata": {},
    "outputs": [
@@ -74,7 +74,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "fc063760",
    "metadata": {},
    "outputs": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "d84716ed",
    "metadata": {},
    "outputs": [
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "id": "10e34fd7",
    "metadata": {},
    "outputs": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "id": "01f9a888",
    "metadata": {},
    "outputs": [
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "id": "76bb38c3",
    "metadata": {},
    "outputs": [
@@ -204,14 +204,140 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "6dc4ef65",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "               Name  Age\n",
+      "Captian       Luffy   19\n",
+      "Vice-Captian   Zoro   22\n",
+      "Cook          Sanji   22\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Datarframe = Atabular data Structure with rows and columns.(2-D) same as spread sheet\n",
+    "data = {\"Name\" : [\"Luffy\", \"Zoro\", \"Sanji\"],\n",
+    "        \"Age\" : [19 ,22, 22]}\n",
+    "df = pd.DataFrame(data, index =[\"Captian\", \"Vice-Captian\", \"Cook\"])\n",
+    "print(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "eaf6d227",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name    Luffy\n",
+      "Age        19\n",
+      "Name: Captian, dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df.loc[\"Captian\"])#For Single Row by label"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "ed82adbe",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name    Zoro\n",
+      "Age       22\n",
+      "Name: Vice-Captian, dtype: object\n",
+      "Name    Sanji\n",
+      "Age        22\n",
+      "Name: Cook, dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df.iloc[1])#same with index\n",
+    "print(df.iloc[2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "242deebb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "               Name  Age  Joining\n",
+      "Captian       Luffy   19  Captian\n",
+      "Vice-Captian   Zoro   22    Crew1\n",
+      "Cook          Sanji   22    Crew3\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Add new Column\n",
+    "df[\"Joining\"] = [\"Captian\", \"Crew1\", \"Crew3\"]\n",
+    "print(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "5ddbaf0d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "               Name  Age  Joining\n",
+      "Captian       Luffy   19  Captian\n",
+      "Vice-Captian   Zoro   22    Crew1\n",
+      "Cook          Sanji   22    Crew3\n",
+      "Navigator      Nami   21    Crew2\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Add new Row : create new dataframe and concatenate\n",
+    "new_row = pd.DataFrame([{\"Name\":\"Nami\", \"Age\": 21,\"Joining\" : \"Crew2\" }], index =[\"Navigator\"])\n",
+    "df = pd.concat([df ,new_row])#used to concatenate\n",
+    "print(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "3b0e10d7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Datarframe = Atabular data Structure with rows and columns.(2-D) same as spread sheet\n",
-    "\n"
+    "#importing\n",
+    "#we read by using pd.read_csv()\n",
+    "#for jso: pd.read_json\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b1a86e6a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
