--- a/Numpy.ipynb
+++ b/Numpy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "a7693782",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "ddb9ac84",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "id": "18392335",
    "metadata": {},
    "outputs": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "id": "3f7a47ed",
    "metadata": {},
    "outputs": [],
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "id": "83250048",
    "metadata": {},
    "outputs": [
@@ -67,7 +67,7 @@
        "       [4, 5, 6]])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "id": "0f23b544",
    "metadata": {},
    "outputs": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 7,
    "id": "fe37dc78",
    "metadata": {},
    "outputs": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "id": "eb4fe264",
    "metadata": {},
    "outputs": [
@@ -136,7 +136,7 @@
        "       [ 8, 10, 12]])"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "2dbab6f4",
    "metadata": {},
    "outputs": [
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "58284685",
    "metadata": {},
    "outputs": [
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 11,
    "id": "4714b565",
    "metadata": {},
    "outputs": [
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "7a5b7a89",
    "metadata": {},
    "outputs": [
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 13,
    "id": "48eb97ad",
    "metadata": {},
    "outputs": [
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 14,
    "id": "849b5554",
    "metadata": {},
    "outputs": [
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 15,
    "id": "2163201d",
    "metadata": {},
    "outputs": [
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 16,
    "id": "ad48b764",
    "metadata": {},
    "outputs": [
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 17,
    "id": "ed3c4e71",
    "metadata": {},
    "outputs": [
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 18,
    "id": "ef468d5f",
    "metadata": {},
    "outputs": [
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "47172ea5",
    "metadata": {},
    "outputs": [
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 20,
    "id": "368625f5",
    "metadata": {},
    "outputs": [
@@ -479,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "71fe7b7e",
    "metadata": {},
    "outputs": [
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 22,
    "id": "89956913",
    "metadata": {},
    "outputs": [
@@ -541,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 23,
    "id": "daec4d51",
    "metadata": {},
    "outputs": [
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 24,
    "id": "64833025",
    "metadata": {},
    "outputs": [
@@ -613,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "d97b6c2f",
    "metadata": {},
    "outputs": [
@@ -634,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 26,
    "id": "67503a0b",
    "metadata": {},
    "outputs": [
@@ -642,11 +642,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 84  21  69]\n",
-      " [ 45  56  39]\n",
-      " [ 70  50  28]\n",
-      " [ 63  84  81]\n",
-      " [ 61 101  20]]\n"
+      "[[75 46 15]\n",
+      " [33 15 63]\n",
+      " [81 58 99]\n",
+      " [94 12 96]\n",
+      " [72 12 45]]\n"
      ]
     }
    ],
@@ -658,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 27,
    "id": "f52be6e5",
    "metadata": {},
    "outputs": [
@@ -681,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "a7d3aeec",
    "metadata": {},
    "outputs": [
@@ -702,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 29,
    "id": "7a955669",
    "metadata": {},
    "outputs": [
@@ -710,7 +710,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 6  5  4 10  2  9  8  1]\n"
+      "[10  9  4  6  1  8  5  2]\n"
      ]
     }
    ],
@@ -723,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 30,
    "id": "f76b0254",
    "metadata": {},
    "outputs": [
@@ -731,9 +731,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[['apple' 'orange' 'apple']\n",
-      " ['coconut' 'apple' 'banana']\n",
-      " ['coconut' 'coconut' 'orange']]\n"
+      "[['apple' 'banana' 'orange']\n",
+      " ['orange' 'apple' 'apple']\n",
+      " ['apple' 'banana' 'orange']]\n"
      ]
     }
    ],
